Adding ability to update records in DB
